# home-test

./: ARCHITECTURE.md  BEFORE_AFTER.md  BUILD.md  CHANGES.md  CMakeLists.txt  FILE_STRUCTURE.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  build.bat  build.sh
examples/: complex_drawing.txt  error_test.txt  large_grid.txt  simple.txt  simple1.txt  streaming_test.txt  stress_test.txt  test_dimension_order.txt  test_duplicate_dimension.txt  test_nested_boxes.txt
src/: main.cpp
src/commands/: CommandFactory.cpp  CommandFactory.h  DimensionCommand.cpp  DimensionCommand.h  ICommand.h  LineToCommand.cpp  LineToCommand.h  MoveToCommand.cpp  MoveToCommand.h
src/controller/: Controller.cpp  Controller.h
src/executor/: CommandExecutor.cpp  CommandExecutor.h
src/model/: Grid.cpp  Grid.h  Point.cpp  Point.h  RobotState.cpp  RobotState.h  ThreadSafeQueue.h
src/parser/: CommandParser.cpp  CommandParser.h  Parser.cpp  Parser.h
src/renderer/: GridRenderer.cpp  GridRenderer.h
src/utils/: BresenhamLine.cpp  BresenhamLine.h
test/: valgrind_test.sh
